dark mode bugs

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
 }
 
 .dark {
-  --background: 0,0,0;
+  --background: 18, 18, 19;
   --primary: 255,255,255;
 }
 
