--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -1,4 +1,5 @@
 .custom .solid-select-container {
+  background-color: rgba(var(--background));
   
   }
   .custom .solid-select-control {
@@ -13,6 +14,8 @@
     
   }
   .custom .solid-select-option:hover {
+    background-color: rgba(var(--background));
+
     
   }
   .custom .solid-select-option[data-focused=true] {
@@ -21,5 +24,6 @@
 
   .custom .solid-select-list {
     background-color: rgba(var(--background));
-    height: 170px;
+    height: 220px;
+    border-radius: 20px;
   }
